--- a/index.html
+++ b/index.html
@@ -11,14 +11,23 @@
     <link rel="stylesheet" href="tema4.css">
     <link rel="stylesheet" href="tema5.css">
     <link rel="stylesheet" href="om_mig.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="tema2.css">
+    <link rel="stylesheet" href="tema3.css">
+    <link rel="stylesheet" href="tema4.css">
+    <link rel="stylesheet" href="tema5.css">
+    <link rel="stylesheet" href="om_mig.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>forside</title>
 </head>
 
 <body>
     <header>
+
         <div class="logo">
             <a href="index.html"><img src="forside_imgs/laura.webp" alt="mitansigt"></a>
         </div>
+
         <nav class="header">
             <ul class="menu">
                 <li><a href="tema2.html">Tema 2</a></li>
@@ -34,6 +43,15 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="intro">
+            <h1>Mit Eksamensprojekt</h1>
+
+            <p>Her kan du finde information om mine temaer og lære mere om mig.</p>
+        </div>
+
+
+    </main>
 
     <footer>Lavet af Laura</footer>
 
