forside næsten færdig

--- a/index.html
+++ b/index.html
@@ -18,17 +18,23 @@
     <link rel="stylesheet" href="tema5.css">
     <link rel="stylesheet" href="om_mig.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>forside</title>
+    <title>Mit Eksamensprojekt</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Liter&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
 
         <div class="logo">
-            <a href="index.html"><img src="forside_imgs/laura.webp" alt="mitansigt"></a>
+            <a href="index.html">
+                <img src="forside_imgs/laura.webp" alt="mitansigt"></a>
         </div>
 
-        <nav class="header">
+        <nav class="nav-menu">
             <ul class="menu">
                 <li><a href="tema2.html">Tema 2</a></li>
                 <li><a href="tema3.html">Tema 3</a></li>
@@ -44,10 +50,22 @@
         </nav>
     </header>
     <main>
-        <div class="intro">
-            <h1>Mit Eksamensprojekt</h1>
+        <div class="baggrund">
+            <div class="intro">
+                <h1>Mit Eksamensprojekt</h1>
 
-            <p>Her kan du finde information om mine temaer og lære mere om mig.</p>
+                <p>Her er en præsentation af highlights fra de forskellige temaer, vi har haft på første semester! </p>
+            </div>
+        </div>
+        <div class="temaer-titel">
+            <h2>Temaer</h2>
+        </div>
+        <div class="tema-grid">
+            <a href="tema2.html" class="tema-boks">Tema 2</a>
+            <a href="tema3.html" class="tema-boks">Tema 3</a>
+            <a href="tema4.html" class="tema-boks">Tema 4</a>
+            <a href="tema5.html" class="tema-boks">Tema 5</a>
+            <a href="om_mig.html" class="tema-boks">Om mig!</a>
         </div>
 
 
