opdatering af temaer

--- a/om_mig.html
+++ b/om_mig.html
@@ -11,15 +11,30 @@
     <link rel="stylesheet" href="tema4.css">
     <link rel="stylesheet" href="tema5.css">
     <link rel="stylesheet" href="om_mig.css">
-    <title>forside</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="tema2.css">
+    <link rel="stylesheet" href="tema3.css">
+    <link rel="stylesheet" href="tema4.css">
+    <link rel="stylesheet" href="tema5.css">
+    <link rel="stylesheet" href="om_mig.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Mit Eksamensprojekt</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Liter&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
+
         <div class="logo">
-            <a href="index.html"><img src="forside_imgs/laura.webp" alt="mitansigt"></a>
+            <a href="index.html">
+                <img src="forside_imgs/laura.webp" alt="mitansigt"></a>
         </div>
-        <nav class="header">
+
+        <nav class="nav-menu">
             <ul class="menu">
                 <li><a href="tema2.html">Tema 2</a></li>
                 <li><a href="tema3.html">Tema 3</a></li>
