--- a/tema2.html
+++ b/tema2.html
@@ -50,6 +50,13 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div>
+
+        </div>
+
+
+    </main>
 
     <footer>Lavet af Laura</footer>
 
